# oxide

./: .gitignore  AGENTS.md  ANIMATION_CONFIG_REFACTOR.md  COMPLETE_TEST_MIGRATION_PLAN.md  DESIGN_SYSTEM_PROPER_USAGE.md  FINAL_PHASE_4_SUMMARY.md  FIXES_IMPLEMENTED.md  Justfile  LICENSE-APACHE  NAMETAG_OXIDEUI_GAP_ANALYSIS.md  NAMETAG_OXIDEUI_PLAN.md  OXIDEUI_CRITICAL_REVIEW.md  OXIDEUI_NAMETAG_COMPLETE_AUDIT.md  OXIDE_ACTIVE_PLAN.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PHASE4_IMPLEMENTATION_COMPLETE.md  SHIFTINGTEXTINPUT_USAGE.md  TEST_COVERAGE_AUDIT.md  UPDATED_TEST_PLAN.md  spec.xml  sweep.csv  sweep.json  sweep.txt
oxide/: Cargo.toml  README.md  perf-experiments.toml  rustfmt.toml
oxide/benchmarks/: CONTRACT.md
oxide/benchmarks/experiments/c00-paired-renderer-experiments/: README.md
oxide/benchmarks/experiments/c01-rendering-architecture-workloads/: README.md
oxide/benchmarks/experiments/c02-renderer-accounting/: README.md
oxide/benchmarks/experiments/c03-renderer-parity/: README.md
oxide/benchmarks/experiments/c04-webgpu-id-mask-uniforms/: README.md
oxide/benchmarks/experiments/c05-metal-layer-cache/: README.md
oxide/benchmarks/experiments/c06-metal-image-resource-tables/: README.md
oxide/benchmarks/experiments/c07-metal-neon-marker-abi/: README.md
oxide/benchmarks/experiments/c08-metal-active-frame-slot/: README.md
oxide/benchmarks/experiments/c09-metal-neon-frame-ring/: README.md
oxide/benchmarks/experiments/c10-metal-target-validity/: README.md
oxide/benchmarks/experiments/c11-native-coalesce-reuse/: README.md
oxide/benchmarks/experiments/c12-native-damage-reuse/: README.md
oxide/benchmarks/experiments/c13-ui-noop-filter/: README.md
oxide/benchmarks/experiments/c14-image-view-crop/: README.md
oxide/benchmarks/experiments/c15-webgpu-r8-atlas/: README.md
oxide/benchmarks/experiments/c16-webgpu-packed-geometry/: README.md
oxide/benchmarks/experiments/c17-metal-effect-targets/: README.md
oxide/benchmarks/experiments/c18-metal-frame-resources/: README.md
oxide/benchmarks/experiments/c19-webgpu-lazy-targets/: README.md
oxide/benchmarks/oxide-device/: 2026-04-04.md  2026-07-15.md  latest.json  latest.md
oxide/benchmarks/uikit/: 2026-03-26.md  2026-03-27.md  ci-current.json  ci-current.md  latest.json  latest.md
oxide/benchmarks/uikit-device/: 2026-04-04.md  2026-04-05.md  2026-07-15.md  latest.json  latest.md
oxide/benchmarks/web/: 2026-07-15.md  latest.json  latest.md
oxide/benchmarks/workspace/: 2026-03-26.md  2026-03-27.md  2026-04-26.md  2026-05-14.md  2026-05-31.md  2026-06-01.md  2026-06-22.md  2026-07-15.md  ci-current.json  ci-current.md  latest.json  latest.md
oxide/crates/harness-registry/: Cargo.toml
oxide/crates/image-store/: Cargo.toml
oxide/crates/input/: Cargo.toml
oxide/crates/networking/: Cargo.toml
oxide/crates/perf-runner/: Cargo.toml
oxide/crates/permissions/: Cargo.toml
oxide/crates/platform-android/: Cargo.toml
oxide/crates/platform-api/: Cargo.toml
oxide/crates/platform-apple/: Cargo.toml  build.rs
oxide/crates/platform-ios/: Cargo.toml  build.rs
oxide/crates/platform-macos/: Cargo.toml
oxide/crates/platform-web/: Cargo.toml
oxide/crates/renderer-api/: Cargo.toml
oxide/crates/renderer-metal/: Cargo.toml  build.rs
oxide/crates/renderer-web/: Cargo.toml
oxide/crates/snapshot-runner/: Cargo.toml
oxide/crates/starscape-background/: Cargo.toml
oxide/crates/telemetry/: Cargo.toml
oxide/crates/test-scenes/: Cargo.toml
oxide/crates/text/: Cargo.toml
oxide/crates/timing/: Cargo.toml
oxide/crates/ui-core/: Cargo.toml
oxide/crates/utils/: Cargo.toml
oxide/crates/wasm-alloc-counter/: Cargo.toml
oxide/docs/: README.md  testing.md
oxide/docs/image-store/: lib.md
oxide/docs/oxide-host-ios/: lib.md
oxide/docs/oxide-host-macos/: lib.md
oxide/docs/oxide-host-web/: lib.md
oxide/docs/oxide-text/: lib.md
oxide/docs/perf-runner/: architecture_matrix.md  lib.md  paired.md
oxide/docs/permissions/: lib.md  sensors.md
oxide/docs/platform-android/: lib.md
oxide/docs/platform-api/: lib.md  secure_storage.md  telephony.md
oxide/docs/platform-apple/: lib.md
oxide/docs/platform-ios/: lib.md
oxide/docs/platform-macos/: lib.md
oxide/docs/platform-web/: http.md  lib.md
oxide/docs/renderer-api/: lib.md  retained.md
oxide/docs/renderer-metal/: id_mask_gpu.md  lib.md  prepared.md  scene3d.md
oxide/docs/renderer-web/: lib.md  solid_color.md
oxide/docs/snapshot-runner/: lib.md  main.md
oxide/docs/test-scenes/: lib.md
oxide/docs/timing/: lib.md
oxide/docs/ui-core/: anim.md  bitmap_text.md  draw_replay.md  elements.md  emitter.md  layout_async.md  lib.md  overlay.md  picker_popup.md  surface.md  text_fields.md
oxide/docs/wasm-alloc-counter/: lib.md
oxide/docs/xtask/: lib.md
oxide/goldens/perf/: smoke.json
oxide/host/ios-app/: README.md
oxide/host/macos-app/: README.md
oxide/host/react-native-camera-bench/: .gitignore  App.tsx  app.json  package-lock.json  package.json
oxide/scripts/: c43_text_paired_adapter.mjs  c44_text_atlas_paired_adapter.mjs  c44_text_cpu_paired_adapter.mjs  c44_text_production_paired_adapter.mjs  c45_glyph_instance_paired_adapter.mjs  c46_webgpu_glyph_paired_adapter.mjs  check_c37_rrect_pixels.mjs  check_webgpu_browser_golden.mjs  compare_id_mask_reference.mjs  ios-test.sh  run_web_scheduler_c20.mjs  run_webgpu_atlas_c15.mjs  run_webgpu_dynamic_c26.mjs  run_webgpu_geometry_c16.mjs  run_webgpu_local_layers_c30.mjs  run_webgpu_prepared_c25.mjs  run_webgpu_targets_c19.mjs
oxide/xtask/: Cargo.toml
oxide/xtask/src/: lib.rs  main.rs
oxide/xtask/tests/: cli_tests.rs  xtask_tests.rs
oxideui/crates/perf-runner/: Cargo.toml
oxideui/crates/platform-api/: Cargo.toml
oxideui/crates/platform-ios/: Cargo.toml
oxideui/crates/platform-macos/: Cargo.toml
oxideui/crates/renderer-metal/: Cargo.toml  build.rs
oxideui/crates/snapshot-runner/: Cargo.toml
oxideui/crates/test-scenes/: Cargo.toml
oxideui/crates/ui-core/: Cargo.toml
(+593 files in other folders)
