[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
oxide-perf-runner = { path = "../crates/perf-runner" }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
plist = "1.6"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "xtask"
path = "src/main.rs"
