[package]
name = "oxide-perf-runner"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
core-graphics-types = "0.2"
foreign-types = "0.5"
metal-rs = { package = "metal", version = "0.32" }
oxide-harness-registry = { path = "../harness-registry" }
oxide-input = { path = "../input" }
oxide-permissions = { path = "../permissions" }
oxide-platform-api = { path = "../platform-api" }
oxide-platform-web = { path = "../platform-web" }
oxide-renderer-metal = { path = "../renderer-metal" }
oxide-renderer-api = { path = "../renderer-api" }
oxide-renderer-web = { path = "../renderer-web" }
oxide-test-scenes = { path = "../test-scenes" }
oxide-text = { path = "../text" }
oxide-timing = { path = "../timing" }
oxide-ui-core = { path = "../ui-core" }
oxide-wasm-alloc-counter = { path = "../wasm-alloc-counter" }
png = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
