[package]
name = "oxide-platform-apple"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared Apple platform bindings for Oxide"

[dependencies]
libc = "0.2"
once_cell = "1.19"
oxide-networking = { path = "../networking" }
oxide-platform-api = { path = "../platform-api" }
serde_json = "1.0"

[features]
web-view-macos = []

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
