[package]
name = "oxide-platform-ios"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "iOS platform bindings for Oxide (UIKit/Metal bridge)"

[dependencies]
oxide-platform-api = { path = "../platform-api" }
oxide-networking = { path = "../networking" }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread","time","macros"], optional = true }
num_cpus = { version = "1.16", optional = true }
libc = "0.2"
mach2 = "0.4"

[build-dependencies]
cc = "1.0"

[features]
tokio-runtime = ["tokio", "num_cpus", "oxide-platform-api/tokio-runtime"]
native-camera-bridge = []
nametag-host-bridge = []

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
