[package]
name = "oxide-platform-web"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web browser platform adapter for Oxide WebAssembly hosts"

[dependencies]
oxide-platform-api = { path = "../platform-api" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "=0.3.77"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
web-sys = { version = "=0.3.77", features = [
   "Clipboard",
   "Coordinates",
   "CssStyleDeclaration",
   "CustomEvent",
   "Document",
   "Element",
   "Event",
   "EventTarget",
   "Geolocation",
   "HtmlElement",
   "HtmlIFrameElement",
   "Location",
   "MediaDevices",
   "MediaStream",
   "MediaStreamConstraints",
   "MediaStreamTrack",
   "MediaQueryList",
   "Navigator",
   "Node",
   "Performance",
   "Position",
   "PositionError",
   "PositionOptions",
   "Storage",
   "Url",
   "Window",
] }

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
