[package]
name = "oxide-renderer-web"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WebAssembly canvas renderer implementation for Oxide"

[dependencies]
oxide-renderer-api = { path = "../renderer-api" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.98"
oxide-wasm-alloc-counter = { path = "../wasm-alloc-counter" }
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.98", features = [
   "CanvasGradient",
   "CanvasRenderingContext2d",
   "CssStyleDeclaration",
   "Document",
   "Element",
   "HtmlCanvasElement",
   "ImageData",
   "Navigator",
   "Performance",
   "Window",
] }
wgpu = { version = "=26.0.1", default-features = false, features = ["std", "webgpu", "wgsl"] }

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
