[package]
name = "oxide-test-scenes"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
oxide-ui-core = { path = "../ui-core" }
oxide-renderer-api = { path = "../renderer-api" }
oxide-platform-api = { path = "../platform-api" }
oxide-input = { path = "../input" }
oxide-permissions = { path = "../permissions" }
oxide-telemetry = { path = "../telemetry" }
oxide-timing = { path = "../timing" }
once_cell = { version = "1.20", default-features = false }
