[package]
name = "oxide-text"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Text shaping and glyph atlas for Oxide"

[lib]
path = "src/lib.rs"

[dependencies]
rustybuzz = "0.14"
swash = { version = "0.1", features = ["render"] }
ttf-parser = "0.20"
oxide-renderer-api = { path = "../renderer-api" }
alloc-no-stdlib = { version = "2", optional = true }
anyhow = "1.0"
