[package]
name = "oxide-timing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Display link, timers, and frame pacing for Oxide"

[lib]
path = "src/lib.rs"

[dependencies]
oxide-platform-api = { path = "../platform-api" }
once_cell = "1.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.98", features = [
   "Performance",
   "Window",
] }
