[package]
name = "oxideui-platform-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic traits, events, and types for OxideUI"

[lib]
path = "src/lib.rs"

[features]
# Matches workspace feature naming; not enabled by default here.
tokio-runtime = []

[dependencies]
oxideui-renderer-api = { path = "../renderer-api" }
bitflags = "2.6"
