[package]
name = "oxideui-platform-ios"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "iOS platform bindings for OxideUI (UIKit/Metal bridge)"

[dependencies]
oxideui-platform-api = { path = "../platform-api" }
oxideui-networking = { path = "../networking" }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread","time","macros"], optional = true }
num_cpus = { version = "1.16", optional = true }
libc = "0.2"

[features]
tokio-runtime = ["tokio", "num_cpus", "oxideui-platform-api/tokio-runtime"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
