[package]
name = "oxideui-snapshot-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
oxideui-renderer-metal = { path = "../renderer-metal" }
oxideui-renderer-api = { path = "../renderer-api" }
oxideui-ui-core = { path = "../ui-core" }
oxideui-timing = { path = "../timing" }
oxideui-text = { path = "../text" }
oxideui-platform-api = { path = "../platform-api" }
clap = { version = "4", features = ["derive"] }
png = "0.17"
anyhow = "1.0"


[[bin]]
name = "oxideui-snapshot-runner"
path = "src/main.rs"
