[package]
name = "oxideui-test-scenes"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
oxideui-ui-core = { path = "../ui-core" }
oxideui-renderer-api = { path = "../renderer-api" }
oxideui-platform-api = { path = "../platform-api" }
oxideui-permissions = { path = "../permissions" }
oxideui-telemetry = { path = "../telemetry" }
oxideui-timing = { path = "../timing" }
once_cell = { version = "1.20", default-features = false }
