[package]
name = "oxide-host-ios"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Staticlib host bridge for iOS app"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
cc = "1.0"

[dependencies]
oxide-input = { path = "../../../crates/input" }
oxide-platform-ios = { path = "../../../crates/platform-ios", features = ["tokio-runtime", "native-camera-bridge"] }
oxide-perf-runner = { path = "../../../crates/perf-runner" }
oxide-renderer-metal = { path = "../../../crates/renderer-metal" }
oxide-renderer-api = { path = "../../../crates/renderer-api" }
oxide-ui-core = { path = "../../../crates/ui-core" }
oxide-test-scenes = { path = "../../../crates/test-scenes" }
oxide-timing = { path = "../../../crates/timing" }
oxide-text = { path = "../../../crates/text" }
oxide-permissions = { path = "../../../crates/permissions" }
oxide-platform-api = { path = "../../../crates/platform-api" }
oxide-networking = { path = "../../../crates/networking" }
oxide-telemetry = { path = "../../../crates/telemetry" }
png = "0.17"
libc = "0.2"
mach2 = "0.4"

[features]
ios-edr = []
tokio-runtime = []
perf-host-stubs = []
