[package]
name = "oxide-host-macos"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Staticlib host bridge for macOS AppKit app"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[features]
default = []
host-testing = []

[[test]]
name = "web_view_harness"
path = "tests/web_view_harness.rs"
harness = false
required-features = ["host-testing"]

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"
oxide-input = { path = "../../../crates/input" }
oxide-platform-api = { path = "../../../crates/platform-api" }
oxide-platform-macos = { path = "../../../crates/platform-macos" }
oxide-renderer-metal = { path = "../../../crates/renderer-metal" }
oxide-renderer-api = { path = "../../../crates/renderer-api" }
oxide-ui-core = { path = "../../../crates/ui-core" }
oxide-test-scenes = { path = "../../../crates/test-scenes" }
oxide-timing = { path = "../../../crates/timing" }
oxide-text = { path = "../../../crates/text" }
oxide-telemetry = { path = "../../../crates/telemetry" }
png = "0.17"
