[package]
name = "oxide-host-web"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WebAssembly browser host for Oxide"

[dependencies]
oxide-platform-api = { path = "../../../crates/platform-api" }
oxide-platform-web = { path = "../../../crates/platform-web" }
oxide-renderer-api = { path = "../../../crates/renderer-api" }
oxide-renderer-web = { path = "../../../crates/renderer-web" }
oxide-test-scenes = { path = "../../../crates/test-scenes" }
oxide-text = { path = "../../../crates/text" }
oxide-ui-core = { path = "../../../crates/ui-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.98"
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.98", features = [
   "Document",
   "DomRect",
   "Element",
   "Event",
   "EventTarget",
   "CompositionEvent",
   "CssStyleDeclaration",
   "HtmlElement",
   "HtmlCanvasElement",
   "HtmlTextAreaElement",
   "InputEvent",
   "KeyboardEvent",
   "Navigator",
   "Performance",
   "PointerEvent",
   "WheelEvent",
   "Window",
] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
