[package]
name = "oxide-host-web"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WebAssembly browser host for Oxide"

[dependencies]
oxide-image-store = { path = "../../../crates/image-store" }
oxide-platform-api = { path = "../../../crates/platform-api" }
oxide-platform-web = { path = "../../../crates/platform-web" }
oxide-renderer-api = { path = "../../../crates/renderer-api" }
oxide-renderer-web = { path = "../../../crates/renderer-web", features = ["snapshot-tests"] }
oxide-test-scenes = { path = "../../../crates/test-scenes" }
oxide-text = { path = "../../../crates/text" }
oxide-ui-core = { path = "../../../crates/ui-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
js-sys = "0.3.98"
oxide-wasm-alloc-counter = { path = "../../../crates/wasm-alloc-counter" }
png = "0.17"
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.98", features = [
   "Document",
   "DomRect",
   "Element",
   "Event",
   "EventTarget",
   "CompositionEvent",
   "CssStyleDeclaration",
   "HtmlElement",
   "HtmlCanvasElement",
   "HtmlTextAreaElement",
   "InputEvent",
   "KeyboardEvent",
   "MutationObserver",
   "MutationObserverInit",
   "Navigator",
   "Node",
   "Performance",
   "PointerEvent",
   "ResizeObserver",
   "ResizeObserverEntry",
   "WheelEvent",
   "Window",
] }

[dev-dependencies]
png = "0.17"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
