[package]
name = "oxideui-macos-app"
version = "0.1.0"
edition = "2021"

[dependencies]
oxideui_host_macos = { package = "oxideui-host-macos", path = "../oxideui-host-macos" }
libc = "0.2"

[[bin]]
name = "oxideui-macos-app"
path = "src/main.rs"

[package.metadata.bundle]
name = "OxideUI Test"
identifier = "dev.oxideui.macos-app"
osx_minimum_system_version = "12.0"
resources = ["../Resources"]
